--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
     description: "Username for ssh connection"
     required: false
     default: "git"
+  git_credentials:
+    description: "Git credentials for https connection"
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
